# next14-fastapi-crud

./: README.md
backend/: Makefile  pyproject.toml
backend/app/: main.py
backend/app/routers/: todos.py
frontend/: package-lock.json
frontend/src/app/: TodoItem.tsx  TodoService.ts  page.tsx
